--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>"Welcome to Samuel Brown Website"</h1>
+  <h1>Welcome to Samuel Brown Website</h1>
   <script src="script.js"></script>
 
   <!--
